made stylistic changes

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,41 +1,39 @@
 :root {
-  --md-primary-fg-color:        #f4f262;
-  --md-primary-fg-color--light: #b4b5fc;
-  --md-primary-fg-color--dark:  #172b6c;
-  --md-accent-fg-color: #f29c44;
+  --md-primary-fg-color:        #0066cc;
 }
-
+/* 
 a {
     color: #f4f262;
-}
+} */
 
-body {
+/* body {
     background-color: #050772;
 }
 
 .md-header {
     color: #070a9a;
 }
+ */
 
-.md-header {
-    color: #070a9a;
+ .md-header {
+    color: #ffcc00;
 }
 
-code {
+/* code {
     background-color: #b4b5fc!important;
     color: #020043!important;
-}
+} */
 
 h1 {
-    color: #b4b5fc!important
+    color: #0066cc!important
 }
-
-.md-search__form {
+/* 
+/* .md-search__form {
     background-color: #070a9a!important;
     color: #f4f262;
-}
+} */
 
-.md-search__input {
+/* .md-search__input {
     color: #f4f262;
 }
 
@@ -45,4 +43,7 @@ h1 {
 
 .md-search-result__meta,  .md-search-result__list h1, .md-search-result__list p, .md-search-result__list div {
     color: #f4f262!important;
+} */
+ol { 
+    list-style-type: lower-alpha; 
 }
